<resources>
    <string name="app_name">Historia Compagnon</string>
    <string name="historia">Historia</string>
    <string name="historia_app">Historia Compagnon</string>
    <string name="web_client_id">1063030743595-qpf4uvvl1up0ltb41hfbbebgv6rciv4s.apps.googleusercontent.com</string>

    <string name="character">Personnage</string>
    <string name="abilities">Aptitudes</string>
    <string name="fight">Combat</string>
    <string name="inventory">Inventaire</string>
    <string name="relashionship">Relations</string>
    <string name="settings">Paramètres</string>
    <string name="teams">Equipes</string>
    <string name="credit">Crédits</string>
    <string name="logout">Déconnexion</string>

    <!-- Ecran team -->
    <string name="team_title">Équipe</string>
    <string name="team_button_create">Créer\nune équipe</string>
    <string name="team_button_join">Rejoindre\nune équipe</string>
    <string name="team_choose_name">Saisir un nom :</string>
    <string name="team_invitation_code">Code invitation :</string>
    <string name="team_join_as_mj">Vous rejoindrez le groupe en tant que MJ.</string>
    <string name="team_join_as_player">Vous rejoindrez le groupe en tant que joueur.</string>
    <string name="team_invalid_invitation">Aucune équipe ne correspond à ce code</string>
    <string name="team_empty_edit">Aucune information saisie</string>

    <!-- Ecran character -->
    <string name="character_measures">%1$d ans - %2$d cm - %3$d kg</string>
    <string name="description">Description</string>
    <string name="character_rank">Rang : %1$d</string>
    <string name="character_add_job">Ajouter un métier</string>
    <string name="character_modifier">Bonus de maîtrise: </string>
    <string name="job_specialty_lvl">%1$s - Lvl %2$d</string>
    <string name="job_plus_something">+ %1$d</string>
    <string name="character_life_dice_lvl">Points de vie / niveau: </string>
    <string name="character_life_dice_lvl_value">%1 + modificateur CONST</string>
    <string name="character_armors">Armures: </string>
    <string name="character_weapons">Armes: </string>
    <string name="character_throw_save">Jets de sauvegarde: </string>
    <string name="character_tool_masteries">Outils maitrisés: </string>
    <!-- Edit base -->
    <string name="character_edit_base_title">Personnage</string>
    <string name="character_edit_base_name">Prénom</string>
    <string name="character_edit_base_family_name">Nom</string>
    <string name="character_edit_base_race">Familia</string>
    <string name="character_edit_base_race_instinct">Instinct de la familia</string>
    <string name="character_edit_base_species">Espèce</string>
    <string name="character_edit_base_species_instinct">Instinct de l\'espèce</string>
    <string name="character_edit_base_age">Age</string>
    <string name="character_edit_base_size">Taille cm</string>
    <string name="character_edit_base_weight">Poids kg</string>
    <!-- Edit job -->
    <string name="job_edit_title">Métier</string>
    <string name="job_edit_specialty">Spécialisation</string>
    <string name="job_edit_modifier">Bonus maîtrise</string>
    <string name="job_edit_level">Niveau</string>
    <string name="job_edit_dice_lvl">Dé de vie par niveau</string>
    <string name="job_edit_armors">Armures</string>
    <string name="job_edit_weapons">Armes</string>
    <string name="job_edit_throw_save">Bonus jets de sauvegarde</string>
    <string name="job_edit_tool_masteries">Outils maitrisés</string>
    <!-- Delete job -->
    <string name="delete_job">Supprimer métier</string>
    <string name="delete_job_txt">Etes-vous sûr de vouloir supprimer le métier %1$s ?</string>
    <!-- Edit career -->
    <string name="character_edit_career_title">Carrière</string>
    <string name="character_edit_career_name">Nom</string>
    <string name="character_edit_career_rank">Rang</string>
    <string name="character_edit_career_description">Description</string>
    <!-- Edit destiny -->
    <string name="character_edit_destiny_title">Destinée</string>
    <string name="character_edit_destiny_value">Valeur</string>
    <string name="character_edit_destiny_ideal">Idéal</string>
    <string name="character_edit_destiny_link">Lien</string>
    <string name="character_edit_destiny_defect">Défaut</string>
    <string name="character_edit_destiny_trait">Trait de caractère</string>

    <!-- Ecran abilities -->
    <string name="abilities_aptitude">Aptitude</string>
    <string name="aptitude_type">Type: %1$s</string>
    <string name="abilities_characteristics">Caractéristiques</string>
    <string name="abilities_characteristic_name">Nom charactéristique</string>
    <string name="abilities_strength">FORCE</string>
    <string name="abilities_dexterity">DEX</string>
    <string name="abilities_constitution">CONST</string>
    <string name="abilities_charisma">CHA</string>
    <string name="abilities_wisdom">SAG</string>
    <string name="abilities_intellect">INT</string>
    <string name="abilities_skills">Compétences</string>
    <string name="abilities_skill_name">Nom compétence</string>
    <string name="abilities_skill_txt">Cochez les compétences maîtrisées :</string>
    <!-- Edit Aptitude -->
    <string name="aptitude_edit_title">Aptitude</string>
    <string name="aptitude_edit_short_description">Description courte</string>
    <string name="aptitude_edit_damage">Dégats</string>
    <string name="aptitude_edit_heal">Soin</string>
    <string name="aptitude_edit_scope">Portée</string>
    <string name="aptitude_edit_duration">Durée</string>
    <string name="aptitude_edit_effect">Effet</string>
    <string name="aptitude_edit_use">Nombre d\'utilisation</string>
    <string name="aptitude_edit_used">Utilisé :</string>
    <string name="aptitude_edit_type">Type</string>
    <string name="aptitude_edit_tag">Tag</string>
    <!-- Delete aptitude -->
    <string name="delete_aptitude">Supprimer aptitude</string>
    <string name="delete_aptitude_txt">Etes-vous sûr de vouloir supprimer l\'aptitude %1$s ?</string>

    <!-- Ecran fight -->
    <string name="fight_pv">PV</string>
    <string name="fight_pv_bonus">+/-</string>
    <string name="fight_pv_dice">Dés de vie</string>
    <string name="fight_pv_slash">/</string>
    <string name="fight_pv_d">d</string>
    <string name="fight_init">Initiative</string>
    <string name="fight_init_dice">1d20 %1$s</string>
    <string name="fight_ca">CA</string>
    <string name="fight_speed">Vitesse</string>
    <string name="fight_glory_points">Points de gloire</string>
    <string name="fight_inspiration_points">Points d\'inspiration</string>
    <string name="fight_equipment">Equipement</string>
    <string name="fight_equipment_weapons">Arme(s)</string>
    <string name="fight_equipment_shield">Bouclier</string>
    <string name="fight_equipment_armor">Armure</string>
    <string name="fight_equipment_accessories">Accessoire(s)</string>
    <string name="fight_add_pv">Ajouter des PVs</string>
    <string name="fight_minus_pv">Retirer des PVs</string>
    <string name="fight_edit_pv">Modifier PVs</string>
    <string name="fight_edit_pv_dice">Modifier dés de vie</string>
    <string name="fight_max_pv">PV max</string>
    <string name="fight_nb_dice">Quantité</string>
    <string name="fight_type_dice">Type</string>
    <!-- Equipment -->
    <string name="equipment_special">Spécial</string>
    <string name="equipment_x_damage">%1$s de dégats</string>
    <string name="equipment_x_ca">%1$s de CA</string>
    <string name="equipment_damage">Dégats</string>
    <string name="equipment_ca">CA</string>
    <string name="equipment_properties">Propriétés</string>
    <string name="equipment_edit_weapon">Modifier une arme</string>
    <string name="equipment_edit_shield">Modifier un bouclier</string>
    <string name="equipment_edit_accessory">Modifier un accessoire</string>
    <string name="equipment_edit_armor">Modifier une armure</string>
    <string name="equipment_edit_weapon_cac">Arme de corps à corps</string>
    <string name="equipment_edit_weapon_range">Arme à distance</string>
    <string name="equipment_edit_weapon_gun">Arme à feu</string>
    <string name="equipment_delete">Supprimer équipement</string>
    <string name="equipment_delete_txt">Etes-vous sûr de vouloir supprimer l\'équipement %1$s ?</string>
    <!-- Pnj -->
    <string name="pnj">PNJ</string>
    <string name="pnj_short_description">Description courte</string>
    <string name="pnj_relashionship_type">Type de relation</string>
    <!-- Delete pnj -->
    <string name="delete_pnj">Supprimer PNJ</string>
    <string name="delete_pnj_txt">Etes-vous sûr de vouloir supprimer le PNJ %1$s ?</string>
    <!-- Inventory -->
    <string name="equiped">Equipé</string>
    <string name="stuff_nb">Qté</string>
    <string name="item_quantity">Quantité</string>
    <string name="item_type">Type</string>
    <string name="item_title">Objet</string>
    <string name="item_delete">Supprimer objet</string>
    <string name="item_delete_txt">Etes-vous sûr de vouloir supprimer l\'objet %1$s ?</string>
    <string name="inventory_equipments">Equipements</string>


    <string name="cancel">Annuler</string>
    <string name="back">Retour</string>
    <string name="ok">Ok</string>
    <string name="yes">Oui</string>
    <string name="validate">Valider</string>
    <string name="copy">Copié !</string>
    <string name="tiret_2">%1$s - %2$s</string>
    <string name="filter_by">Trier par: </string>
    <string name="name">Nom</string>
    <string name="first">\u0020 en premier</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="credit_msg">Icônes by Icons8 : \n - sword: https://icons8.com/icon/qA0pYlgnkEYf/sword
        \n - relationship: https://icons8.com/icon/Xhdwg9TZV1qD/relationship
        \n - skill: https://icons8.com/icon/EZX8qx3OoQLq/skill
        \n  - skill: https://icons8.com/icon/ScTh4IXihnF9/skill
        \n - potion: https://icons8.com/icon/kVCguktVfr2x/potion
        \n Politique de confidentialité : https://sites.google.com/view/historiacompagnon-privacy/accueil
    </string>
</resources>