<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_team"
        android:icon="@drawable/groups"
        android:title="@string/teams"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/item_credit"
                android:title="@string/credit"
                app:showAsAction="never"/>
<!--            <item-->
<!--                android:id="@+id/item_logout"-->
<!--                android:title="@string/logout"-->
<!--                app:showAsAction="never"/>-->
        </menu>
    </item>

</menu>