<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/app_margin">

        <ImageView
            android:id="@+id/equipment_edit_close"
            android:layout_width="@dimen/icon_edit_size"
            android:layout_height="@dimen/icon_edit_size"
            android:src="@drawable/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_cat" />

        <TextView
            android:id="@+id/equipment_edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fight_equipment"
            android:textColor="@color/color_cat"
            android:textSize="@dimen/title_txt"
            app:layout_constraintBottom_toBottomOf="@+id/equipment_edit_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/equipment_edit_close" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/equipment_edit_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_margin"
            android:background="@color/dark_panel"
            android:padding="@dimen/txt_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipment_edit_title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/equipment_edit_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/txt_margin"
                android:hint="@string/name"
                android:textColorHint="@color/color_cat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/equipment_edit_name_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_cat" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/equipment_edit_damage_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/txt_margin"
                android:hint="@string/equipment_damage"
                android:textColorHint="@color/color_cat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/equipment_edit_ca_layout"
                app:layout_constraintTop_toBottomOf="@+id/equipment_edit_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/equipment_edit_damage_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_cat" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/equipment_edit_ca_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/txt_margin"
                android:hint="@string/equipment_ca"
                android:textColorHint="@color/color_cat"
                app:layout_constraintStart_toEndOf="@+id/equipment_edit_damage_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/equipment_edit_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/equipment_edit_ca_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/color_cat" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/equipment_edit_properties_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/txt_margin"
                android:layout_marginBottom="@dimen/txt_margin"
                android:layout_marginTop="@dimen/space_text_field"
                android:hint="@string/equipment_properties"
                android:textColorHint="@color/color_cat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/equipment_edit_name_layout"
                app:layout_constraintBottom_toTopOf="@+id/equipment_edit_special_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/equipment_edit_properties_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_cat" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/equipment_edit_special_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/txt_margin"
                android:hint="@string/equipment_special"
                android:textColorHint="@color/color_cat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/equipment_edit_properties_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/equipment_edit_special_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_cat" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/equipment_edit_description_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/txt_margin"
                android:hint="@string/description"
                android:textColorHint="@color/color_cat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/equipment_edit_special_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/equipment_edit_description_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_cat" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/equipment_edit_weapon_type_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/equipment_edit_description_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/equipment_edit_type_layout">
                <CheckBox
                    android:id="@+id/equipment_edit_weapon_type_cac"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_cat"
                    android:text="@string/equipment_edit_weapon_cac"/>
                <CheckBox
                    android:id="@+id/equipment_edit_weapon_type_range"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_cat"
                    android:text="@string/equipment_edit_weapon_range"/>
                <CheckBox
                    android:id="@+id/equipment_edit_weapon_type_gun"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_cat"
                    android:text="@string/equipment_edit_weapon_gun"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/equipment_edit_type_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/equipment_edit_description_layout"
                app:layout_constraintStart_toEndOf="@+id/equipment_edit_weapon_type_layout"
                app:layout_constraintEnd_toEndOf="parent">
                <CheckBox
                    android:id="@+id/equipment_edit_weapon_type_shield"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_cat"
                    android:text="@string/fight_equipment_shield"/>
                <CheckBox
                    android:id="@+id/equipment_edit_weapon_type_armor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_cat"
                    android:text="@string/fight_equipment_armor"/>
                <CheckBox
                    android:id="@+id/equipment_edit_weapon_type_other"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_cat"
                    android:text="@string/fight_equipment_accessories"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/equipment_edit_weapon_equiped_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/app_margin"
                app:layout_constraintTop_toBottomOf="@+id/equipment_edit_weapon_type_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <CheckBox
                    android:id="@+id/equipment_edit_equiped"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/app_margin"
                    android:textColor="@color/color_cat"
                    android:text="@string/equiped"/>
            </LinearLayout>
            
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/equipment_edit_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin"
            android:padding="@dimen/txt_margin"
            android:text="@string/validate"
            android:textColor="@color/dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equipment_edit_main_layout" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</ScrollView>