<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/app_margin">

        <ImageView
            android:id="@+id/character_destiny_edit_close"
            android:layout_width="@dimen/icon_edit_size"
            android:layout_height="@dimen/icon_edit_size"
            android:src="@drawable/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_cat" />

        <TextView
            android:id="@+id/character_destiny_edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_edit_destiny_title"
            android:textColor="@color/color_cat"
            android:textSize="@dimen/title_txt"
            app:layout_constraintBottom_toBottomOf="@+id/character_destiny_edit_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/character_destiny_edit_close" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/character_destiny_edit_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_margin"
            android:background="@color/dark_panel"
            android:padding="@dimen/txt_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_destiny_edit_title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/character_destiny_edit_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_margin="@dimen/txt_margin"
                android:textColorHint="@color/color_cat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/character_destiny_edit_name_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_cat"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/character_destiny_edit_value_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/character_edit_destiny_value"
                android:layout_margin="@dimen/txt_margin"
                android:textColorHint="@color/color_cat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_destiny_edit_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/character_destiny_edit_value_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_cat"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/character_destiny_edit_ideal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/character_edit_destiny_ideal"
                android:layout_margin="@dimen/txt_margin"
                android:textColorHint="@color/color_cat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_destiny_edit_value_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/character_destiny_edit_ideal_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_cat"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/character_destiny_edit_link_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/character_edit_destiny_link"
                android:layout_margin="@dimen/txt_margin"
                android:textColorHint="@color/color_cat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_destiny_edit_ideal_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/character_destiny_edit_link_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_cat"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/character_destiny_edit_defect_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/character_edit_destiny_defect"
                android:layout_margin="@dimen/txt_margin"
                android:textColorHint="@color/color_cat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_destiny_edit_link_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/character_destiny_edit_defect_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_cat"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/character_destiny_edit_trait_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/character_edit_destiny_trait"
                android:layout_margin="@dimen/txt_margin"
                android:textColorHint="@color/color_cat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_destiny_edit_defect_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/character_destiny_edit_trait_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_cat"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/character_destiny_edit_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin"
            android:padding="@dimen/txt_margin"
            android:text="@string/validate"
            android:textColor="@color/dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_destiny_edit_main_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>